--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" href="images/PGlogo.jpg">
+  <link rel="icon" type="image/jpg" href="/images/PGlogo.jpg">
 </head>
 <body>
   <!-- Particle Canvas Background -->
@@ -119,7 +119,7 @@
         </div>
         <div class="profile-card">
           <div class="profile-card-inner">
-            <img src="images/TH_bannerimg.png" alt="Trevor Hicks" class="profile-image">
+            <img src="/images/TH_bannerimg.png" alt="Trevor Hicks" class="profile-image">
             <div class="profile-overlay">
               <h3 class="profile-name">Trevor Hicks</h3>
               <p class="profile-title">Game Developer | Software Engineer</p>
@@ -357,7 +357,7 @@
       <div class="projects-grid">
         <div class="project-card">
           <div class="project-image">
-            <img src="images/FPdash Banner.png" alt="Frostpaw Dash" loading="lazy">
+            <img src="/images/FPdash Banner.png" alt="Frostpaw Dash" loading="lazy">
             <div class="project-overlay">
               <div class="project-tags">
                 <span class="project-tag">Unity</span>
@@ -397,7 +397,7 @@
 
         <div class="project-card">
           <div class="project-image">
-            <img src="images/CRGP banner.jpg" alt="Candy Rush Grand Prix" loading="lazy">
+            <img src="/images/CRGP banner.jpg" alt="Candy Rush Grand Prix" loading="lazy">
             <div class="project-overlay">
               <div class="project-tags">
                 <span class="project-tag">Unreal Engine</span>
@@ -427,50 +427,18 @@
             </div>
           </div>
         </div>
-
-        <div class="project-card">
-          <div class="project-image">
-            <img src="images/placeholder.jpg" alt="AI Code Assistant" loading="lazy">
-            <div class="project-overlay">
-              <div class="project-tags">
-                <span class="project-tag">TypeScript</span>
-                <span class="project-tag">Machine Learning</span>
-                <span class="project-tag">VS Code</span>
-              </div>
-            </div>
-          </div>
-          <div class="project-content">
-            <h3 class="project-title">AI Code Assistant</h3>
-            <p class="project-description">A VS Code extension that uses machine learning to suggest code completions and refactorings based on your coding patterns.</p>
-            <div class="project-links">
-              <a href="https://github.com/iamai-core/iamai-pal/tree/Trevor's-branch" target="_blank" rel="noopener noreferrer" class="project-link" aria-label="GitHub Repository">
-                <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M12 2C6.47715 2 2 6.47715 2 12C2 17.5229 6.47715 22 12 22C17.5229 22 22 17.5229 22 12C22 6.47715 17.5229 2 12 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                  <path d="M14.3333 19V17.137C14.3583 16.8275 14.3154 16.5163 14.2073 16.2242C14.0993 15.9321 13.9286 15.6657 13.7067 15.4428C15.8 15.2156 18 14.4431 18 10.8989C17.9998 9.99256 17.6418 9.12101 17 8.46461C17.3039 7.67171 17.2824 6.79528 16.94 6.01739C16.94 6.01739 16.1533 5.7902 14.3333 6.97811C12.8053 6.57488 11.1947 6.57488 9.66666 6.97811C7.84666 5.7902 7.05999 6.01739 7.05999 6.01739C6.71757 6.79528 6.69609 7.67171 6.99999 8.46461C6.35341 9.12588 5.99501 10.0053 5.99999 10.9178C5.99999 14.4337 8.19999 15.2063 10.2933 15.4616C10.074 15.6829 9.90483 15.9461 9.79686 16.2347C9.68889 16.5232 9.64453 16.8306 9.66666 17.137V19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                  <path d="M9.66667 17.7018C7.66667 18.3335 6 17.7018 5 16" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-              </a>
-              <a href="https://github.com/iamai-core/iamai-pal/tree/Trevor's-branch" class="project-details">
-                View Details
-                <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M5 12H19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                  <path d="M12 5L19 12L12 19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-              </a>
-            </div>
-          </div>
           <div class="project-content">
   <h3 class="project-title">MegaBlast Mayhem</h3>
   <p class="project-description">A chaotic 2D action-battle game inspired by Bomberman, featuring retro sprite art, explosive abilities, controller support, and custom maps powered by Java and CSV logic.</p>
   <div class="project-links">
-    <a href="https://github.com/phoenixgoldz/MegaBlast-Mayhem" target="_blank" rel="noopener noreferrer" class="project-link" aria-label="GitHub Repository">
+    <a href="https://github.com/phoenixgoldz/MegablastMayem" target="_blank" rel="noopener noreferrer" class="project-link" aria-label="GitHub Repository">
       <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         <path d="M14.333 19v-1.863a3.332 3.332 0 0 0-.626-1.694c.585-.07 2.201-.307 3.293-1.488 1.007-1.094 1.333-2.769.65-4.134-.273-.545-.63-1.036-1.057-1.456.261-.742.235-1.55-.072-2.27 0 0-.779-.229-2.61.959a7.478 7.478 0 0 0-5.334 0C6.846 5.79 6.06 6.017 6.06 6.017a3.732 3.732 0 0 0-.07 2.27 4.61 4.61 0 0 0-1.058 1.456c-.683 1.365-.356 3.04.65 4.134 1.092 1.181 2.708 1.418 3.293 1.488a3.332 3.332 0 0 0-.626 1.694V19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         <path d="M9.667 17.702C7.667 18.334 6 17.702 5 16" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
       </svg>
     </a>
-    <a href="https://github.com/phoenixgoldz/MegaBlast-Mayhem" class="project-details">
+    <a href="https://github.com/phoenixgoldz/MegablastMayem" class="project-details">
       View Details
       <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M5 12H19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
