--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/jpg" href="/images/PGlogo.jpg">
+  <link rel="icon" type="image/jpg" href="/Images/PGlogo.jpg">
 </head>
 <body>
   <!-- Particle Canvas Background -->
@@ -19,7 +19,7 @@
   <nav class="navbar">
     <div class="container">
       <a href="#" class="logo">
-        <img src="/images/PGlogo.jpg" alt="Logo" class="nav-logo">
+        <img src="/Images/PGlogo.jpg" alt="Logo" class="nav-logo">
         <span class="logo-text">TH</span>
       </a>
       <div class="nav-links">
@@ -119,7 +119,7 @@
         </div>
         <div class="profile-card">
           <div class="profile-card-inner">
-            <img src="/images/TH_bannerimg.png" alt="Trevor Hicks" class="profile-image">
+            <img src="/Images/TH_bannerimg.png" alt="Trevor Hicks" class="profile-image">
             <div class="profile-overlay">
               <h3 class="profile-name">Trevor Hicks</h3>
               <p class="profile-title">Game Developer | Software Engineer</p>
@@ -357,7 +357,7 @@
       <div class="projects-grid">
         <div class="project-card">
           <div class="project-image">
-            <img src="/images/FPdash Banner.png" alt="Frostpaw Dash" loading="lazy">
+            <img src="/Images/FPdash Banner.png" alt="Frostpaw Dash" loading="lazy">
             <div class="project-overlay">
               <div class="project-tags">
                 <span class="project-tag">Unity</span>
@@ -397,7 +397,7 @@
 
         <div class="project-card">
           <div class="project-image">
-            <img src="/images/CRGP banner.jpg" alt="Candy Rush Grand Prix" loading="lazy">
+            <img src="/Images/CRGP banner.jpg" alt="Candy Rush Grand Prix" loading="lazy">
             <div class="project-overlay">
               <div class="project-tags">
                 <span class="project-tag">Unreal Engine</span>
