--- a/index.html
+++ b/index.html
@@ -449,8 +449,8 @@
         </div>
       </div>
       <div class="projects-cta">
-        <a href="projects.html" class="btn btn-primary">
-          View All Projects
+        <a href="https://github.com/phoenixgoldz" class="btn btn-primary">
+          View All Ongoing Projects
           <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M5 12H19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             <path d="M12 5L19 12L12 19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
