--- a/index.html
+++ b/index.html
@@ -427,27 +427,39 @@
             </div>
           </div>
         </div>
-          <div class="project-content">
-  <h3 class="project-title">MegaBlast Mayhem</h3>
-  <p class="project-description">A chaotic 2D action-battle game inspired by Bomberman, featuring retro sprite art, explosive abilities, controller support, and custom maps powered by Java and CSV logic.</p>
-  <div class="project-links">
-    <a href="https://github.com/phoenixgoldz/MegablastMayem" target="_blank" rel="noopener noreferrer" class="project-link" aria-label="GitHub Repository">
-      <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-        <path d="M14.333 19v-1.863a3.332 3.332 0 0 0-.626-1.694c.585-.07 2.201-.307 3.293-1.488 1.007-1.094 1.333-2.769.65-4.134-.273-.545-.63-1.036-1.057-1.456.261-.742.235-1.55-.072-2.27 0 0-.779-.229-2.61.959a7.478 7.478 0 0 0-5.334 0C6.846 5.79 6.06 6.017 6.06 6.017a3.732 3.732 0 0 0-.07 2.27 4.61 4.61 0 0 0-1.058 1.456c-.683 1.365-.356 3.04.65 4.134 1.092 1.181 2.708 1.418 3.293 1.488a3.332 3.332 0 0 0-.626 1.694V19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-        <path d="M9.667 17.702C7.667 18.334 6 17.702 5 16" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-      </svg>
-    </a>
-    <a href="https://github.com/phoenixgoldz/MegablastMayem" class="project-details">
-      View Details
-      <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M5 12H19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-        <path d="M12 5L19 12L12 19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-      </svg>
-    </a>
-  </div>
-        </div>
+          <div class="project-card">
+  <div class="project-image">
+    <img src="/Images/Mbm.jpg" alt="Megablast Mayhem" loading="lazy">
+    <div class="project-overlay">
+      <div class="project-tags">
+        <span class="project-tag">JavaScript</span>
+        <span class="project-tag">Java</span>
+        <span class="project-tag">Multiplayer</span>
       </div>
+    </div>
+  </div>
+  <div class="project-content">
+    <h3 class="project-title">MegaBlast Mayhem</h3>
+    <p class="project-description">
+      A chaotic 2D action-battle game inspired by Bomberman, featuring retro sprite art, explosive abilities, controller support, and custom maps powered by Java and CSV logic.
+    </p>
+    <div class="project-links">
+      <a href="https://github.com/phoenixgoldz/MegablastMayhem" target="_blank" rel="noopener noreferrer" class="project-link" aria-label="GitHub Repository">
+        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M14.333 19v-1.863a3.332 3.332 0 0 0-.626-1.694c.585-.07 2.201-.307 3.293-1.488 1.007-1.094 1.333-2.769.65-4.134-.273-.545-.63-1.036-1.057-1.456.261-.742.235-1.55-.072-2.27 0 0-.779-.229-2.61.959a7.478 7.478 0 0 0-5.334 0C6.846 5.79 6.06 6.017 6.06 6.017a3.732 3.732 0 0 0-.07 2.27 4.61 4.61 0 0 0-1.058 1.456c-.683 1.365-.356 3.04.65 4.134 1.092 1.181 2.708 1.418 3.293 1.488a3.332 3.332 0 0 0-.626 1.694V19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M9.667 17.702C7.667 18.334 6 17.702 5 16" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+      </a>
+      <a href="https://github.com/phoenixgoldz/MegablastMayhem" class="project-details">
+        View Details
+        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M5 12H19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M12 5L19 12L12 19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+      </a>
+    </div>
+  </div>
       <div class="projects-cta">
         <a href="https://github.com/phoenixgoldz" class="btn btn-primary">
           View All Ongoing Projects
