--- a/index.html
+++ b/index.html
@@ -470,12 +470,15 @@
           <div class="project-content">
             <h3 class="project-title">The Forgotten Trial</h3>
             <p class="project-description">
-              A tactical RPG mystery built in Unreal Engine 5.5.4 featuring turn-based combat, AI-generated dialogue, and an immersive dungeon narrative.
+              A tactical RPG mystery built in Unreal Engine 5.5.4 featuring turn-based combat, AI-generated dialogue, and an immersive dungeon narrative with evolving gameplay and unique stories each playthrough!
             </p>
             <div class="project-links">
               <a href="https://github.com/phoenixgoldz/The-Forgotten-Trial" target="_blank" rel="noopener noreferrer" class="project-link" aria-label="GitHub Repository">
                 <!-- GitHub SVG -->
               </a>
+                <a href="https://github.com/phoenixgoldz/The-Forgotten-Trial" class="project-details">
+                View Details
+                </a>
             </div>
           </div>
         </div> <!-- ✅ Properly closed -->
